@@ -1,4 +1,8 @@
-﻿zg 14.09.2014 01:46:47 +0200 - build 4102
+﻿drkns 14.09.2014 02:11:01 +0200 - build 4103
+
+1. Уточнение 4101.
+
+zg 14.09.2014 01:46:47 +0200 - build 4102
 
 1. уточнение 4100: повторный вызов DialogRun.
 
